<resources>
    <string name="app_name">Curso Ideal</string>
    <string name="instituitions_fragment_label">Instituições</string>
    <string name="login_fragment_label">Login</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="menu_logout_title">Logout</string>
    <string name="login_hint_input_email">Digite seu e-mail</string>
    <string name="login_hint_input_senha">Digite sua senha</string>
    <string name="label_button_login">Login</string>
    <string name="label_button_cadastre_se">Cadastrar-se</string>

    <string name="message_success_register_user">Usuário Cadastrado com Sucesso!</string>
    <string name="generic_error_message_register_user">Erro desconhecido durante o cadastro do usuário</string>
    <string name="email_required">E-mail é obrigatório</string>
    <string name="password_required">Senha é obrigatória</string>
    <string name="generic_error_message_login">Erro desconhecido durante a autenticação</string>
    <string name="label_buton_cadastrar">Cadastrar</string>
    <string name="register_user_fragment_label">Novo Usuário</string>
    <string name="login_hint_input_nome">Digite seu nome</string>
    <string name="label_upload_image_camera">Câmera</string>
    <string name="label_upload_image_galerry">Galeria</string>
    <string name="label_upload_image_link">Download por Link</string>
    <string name="upload_link_description">Download</string>
    <string name="upload_gallery_description">Foto da Galeria</string>
    <string name="upload_camera_description">Câmera</string>
    <string name="label_hint_input_link_image">Informe um link de imagem</string>
    <string name="label_button_preview">Visualizar</string>
    <string name="title_menu_item_confirm_image_downloaded">Confirmar Imagem Baixada</string>
    <string name="label_title_download_imagem_link_dialog">Download da Foto</string>
    <string name="name_required">Nome é obrigatório</string>
    <string name="menu_item_institutions_title">Instituições</string>
    <string name="open">Abrir</string>
    <string name="close">Fechar</string>
    <string name="menu_item_institution_maintenance">Nova Institutição</string>
    <string name="label_title_institutions_list">Visualizar</string>
    <string name="label_title_user">Usuário</string>
    <string name="menu_item_user_profile">Perfil</string>
    <string name="menu_item_coruses_evaluation">Avaliações Realizadas</string>
    <string name="menu_item_settings">Configurações</string>
    <string name="menu_item_favorite_courses">Cursos Favoritos</string>
    <string name="menu_item_title_logout">Logout</string>
    <string name="label_title_menu_item_add_course">Novo Curso</string>
    <string name="label_maintenance_cource_fragment">Novo Curso</string>
    <string name="label_tab_instituição">Instituição</string>
    <string name="label_tab_curso">Curso</string>
    <string name="label_tab_avaliações">Avaliações</string>
    <string name="label_title_tab_instituition">Instituição</string>
    <string name="label_title_tab_course">Curso</string>
    <string name="label_title_tab_rating">Avaliações</string>
    <string name="institution_hint_input_name">Nome</string>
    <string name="label_content_description_end_icon_institution_name">Selecionar Instituição Cadastrada</string>
    <string name="title_menu_item_confirm_institution_selected">Confirmar Instituição Selecionada</string>
    <string name="label_title_institutions_dialog">Instituições</string>
    <string name="institution_hint_input_cep">Cep</string>
    <string name="institution_hint_input_state">Estado</string>
    <string name="institution_hint_input_city">Cidade</string>
    <string name="institution_hint_input_district">Bairro</string>
    <string name="institution_hint_input_public_place">Logradouro</string>
    <string name="institution_hint_input_complement">Complemento</string>
    <string name="label_content_description_end_icon_institution_cep">Pesquisar Informações de Endereço a Partir do Cep</string>
    <string name="label_new_course">Novo Curso</string>
    <string name="label_confirm">Confirmar</string>
    <string name="label_title_maintenance_course_dialog">Novo Curso</string>
    <string name="label_save">Salvar</string>

    <string name="required_message">O campo %s é obrigatório</string>
    <string name="message_save_institution">Instituição Salva com Sucesso</string>
    <string name="title_menu_course_item_remover">Remover</string>
    <string name="label_context_menu_course_item_remove">Remover</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home_fragment">Curso Ideal</string>
    <string name="title_courses_fragment">Cursos</string>
    <string name="label_home_message">Bem-Vindo, aqui você encontrará o curso ideal para você</string>
    <string name="label_title_details_course_fragment">Detalhes</string>
    <string name="label_institution">Instituição</string>
    <string name="label_course_name">Nome do Curso</string>
    <string name="label_monthly_payment">Mensalidade</string>
    <string name="label_rating">Avaliação</string>
    <string name="label_address">Endereço</string>
    <string name="label_title_institution_infos">Informações da Instituição</string>
    <string name="label_title_course_infos">Informações do Curso</string>
    <string name="label_modality">Modalidade</string>
    <string name="label_duration">Duração</string>
    <string name="course_infos_tab_label_more_informations">Para mais informações, visite o site da instituição</string>
    <string name="long_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="menu_item_courses_title">Cursos</string>
    <string name="label_content_description_end_icon_modality_course">Pesquisar as modalidades de curso</string>

    <string name="label_modality_item_presential">Presencial</string>
    <string name="label_modality_item_ead">EAD</string>
    <string name="label_modality_item_hibrid">Híbrido</string>
    <string name="label_title_tab_general">Geral</string>
</resources>