<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/uploadCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/upload_camera_description"
            android:src="@drawable/ic_camera_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/label_upload_image_camera" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/uploadGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/upload_gallery_description"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_photo_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/label_upload_image_galerry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/uploadLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/upload_link_description"
            android:src="@drawable/ic_cloud_download_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/label_upload_image_link" />

    </LinearLayout>
</LinearLayout>