<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/InstitutionsFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="br.com.cursoideal.ui.fragment.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_registerUserFragment"
            app:destination="@id/registerUserFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_LoginFragment_to_institutionsFragment"
            app:destination="@id/InstitutionsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/LoginFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/registerUserFragment"
        android:name="br.com.cursoideal.ui.fragment.RegisterUserFragment"
        android:label="@string/register_user_fragment_label"
        tools:layout="@layout/fragment_register_user" />

    <fragment
        android:id="@+id/InstitutionsFragment"
        android:name="br.com.cursoideal.ui.fragment.InstitutionsFragment"
        android:label="@string/instituitions_fragment_label"
        tools:layout="@layout/fragment_institutions">
        <action
            android:id="@+id/action_CoursesFragment_to_maintenanceCourceFragment"
            app:destination="@id/maintenanceCourceFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <action
        android:id="@+id/action_global_LoginFragment"
        app:destination="@id/LoginFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpTo="@id/LoginFragment"
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/maintenanceCourceFragment"
        android:name="br.com.cursoideal.ui.fragment.MaintenanceInstitutionFragment"
        android:label="@string/label_maintenance_cource_fragment"
        tools:layout="@layout/fragment_maintenance_institution" />

</navigation>